--- a/app/views/departments/_form.html.erb
+++ b/app/views/departments/_form.html.erb
@@ -11,17 +11,14 @@
     </div>
   <% end %>
 
-  <div>
-    <%= form.label :name, style: "display: block" %>
-    <%= form.text_field :name %>
+  <div class="form-row">
+    <div class="col-md-4 mb-3">
+      <%= form.text_field :name, placeholder: 'name', class:"form-control "%>
+    </div>
+    <div class="col-md-4 mb-3">
+      <%= form.text_field :description, placeholder: 'description', class:"form-control "%>
+    </div>
   </div>
 
-  <div>
-    <%= form.label :description, style: "display: block" %>
-    <%= form.text_field :description %>
-  </div>
-
-  <div>
-    <%= form.submit %>
-  </div>
+  <button class="btn btn-primary" type="submit">Submit</button>
 <% end %>
