--- a/app/views/departments/index.html.erb
+++ b/app/views/departments/index.html.erb
@@ -1,14 +1,27 @@
-<p style="color: green"><%= notice %></p>
+<% if @departments.present? %>
+  <table class="table">
+    <thead>
+      <tr>
+        <th scope="col">#</th>
+        <th scope="col">Name</th>
+        <th scope="col">Description</th>
+        <th scope="col">Action</th>
+      </tr>
+    </thead>
+    <tbody>
+    <% @departments.each_with_index do |department, index| %>
+      <tr>
+        <th scope="row"><%= index+1 %></th>
+        <td><%= department.name %></td>
+        <td><%= department.description %></td>
+        <td><%= link_to "Show", department %></td>
+      </tr>
+    <% end %>
+    </tbody>
+  </table>
+<% else %>
+    <p>No data</p>
+<% end %>
 
-<h1>Departments</h1>
+<%= button_to "New department", 'departments/new', method: :get, class: 'btn btn-primary' %>
 
-<div id="departments">
-  <% @departments.each do |department| %>
-    <%= render department %>
-    <p>
-      <%= link_to "Show this department", department %>
-    </p>
-  <% end %>
-</div>
-
-<%= link_to "New department", new_department_path %>
