--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,24 +1,28 @@
-<table class="table">
-  <thead>
-    <tr>
-      <th scope="col">#</th>
-      <th scope="col">Full name</th>
-      <th scope="col">Designation</th>
-      <th scope="col">Department</th>
-      <th scope="col">Action</th>
-    </tr>
-  </thead>
-  <tbody>
-  <% @users.each_with_index do |user, index| %>
-    <tr>
-      <th scope="row"><%= index+1 %></th>
-      <td><%= user.name %></td>
-      <td><%= user.designation %></td>
-      <td><%= user.department.name %></td>
-      <td><%= link_to "Show", user %></td>
-    </tr>
-  <% end %>
-  </tbody>
-</table>
+<% if @users.present? %>
+  <table class="table">
+    <thead>
+      <tr>
+        <th scope="col">#</th>
+        <th scope="col">Full name</th>
+        <th scope="col">Designation</th>
+        <th scope="col">Department</th>
+        <th scope="col">Action</th>
+      </tr>
+    </thead>
+    <tbody>
+    <% @users.each_with_index do |user, index| %>
+      <tr>
+        <th scope="row"><%= index+1 %></th>
+        <td><%= user.name %></td>
+        <td><%= user.designation %></td>
+        <td><%= user.department.name %></td>
+        <td><%= link_to "Show", user %></td>
+      </tr>
+    <% end %>
+    </tbody>
+  </table>
+<% else %>
+    <p>No data</p>
+<% end %>
 
 <%= button_to "New user", 'users/new', method: :get, class: 'btn btn-primary' %>
